--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -39,5 +39,6 @@
 </main>
 <footer th:insert="fragments.html::footer"></footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
