--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,39 +32,19 @@
                     <ul class="navbar px-3">
                         <li class="nav-item border-top border-fuente"><a href="/home"
                                 class="nav-link active">INICIO</a></li>
-                        <!--<li class="nav-item border-top border-fuente fs-4"><a href="/recipes/categories"
-                                class="nav-link active">CATEGORIAS</a></li>
-                        
-                        <li>
-                            <div class="dropdown">
-                                <button class="btn btn-fondo dropdown-toggle" type="button" id="dropdownMenu2"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Dropdown
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                    <button class="dropdown-item" type="button">Action</button>
-                                    <button class="dropdown-item" type="button">Another action</button>
-                                    <button class="dropdown-item" type="button">Something else here</button>
-                                </div>
-                            </div>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle border-top border-fuente" href="/categories" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                CATEGORIAS
+                            </a>
+                            <ul class="dropdown-menu bg-fondo">
+                                <li><a class="dropdown-item" href="/recipes">Todo</a></li>
+                                <li><hr class="dropdown-divider bg-fuente"></li>
+                                <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
+                                <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
+                                <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
+                                <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
+                            </ul>
                         </li>
-                        
-                        <li>
-                        <a class="nav-link dropdown-toggle border-top border-fuente"
-                            id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="true">
-                            CATEGORIAS
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="/recipes">Todo</a>
-                            <a class="dropdown-item" href="/recipes/categories/1">Salado</a>
-                            <a class="dropdown-item" href="/recipes/categories/2">Postre</a>
-                            <a class="dropdown-item" href="/recipes/categories/3">Bebida</a>
-                            <a class="dropdown-item" href="/recipes/categories/4">Snack</a>
-                        </div>
-                        </li>-->
-                        <li class="nav-item border-top border-fuente"><a href="/categories"
-                            class="nav-link active">CATEGORIAS</a></li>
                         <li class="nav-item border-top border-fuente"><a href="/recipes"
                                 class="nav-link active">RECETAS</a></li>
                         <li class="nav-item border-top border-fuente"><a href="/nutritionists"
@@ -97,6 +77,7 @@
             <br>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
