--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
                 </section>
 
                 <section class="container-lg border-bottom border-fuente text-center py-4">
-                    <h2 class="text-info">CATEGORIAS</h2>
+                    <a href="/categories" ><h2 class="text-info">CATEGORIAS</h2></a>
                     <article class="d-inline-block px-5 py-3">
                         <div class="d-inline-block px-4 ">
                             <img th:src="@{/images/recetas.png}" alt="recipes" class="img-recipes d-block pb-3 rounded">
@@ -78,6 +78,7 @@
         </main>
         <footer th:insert="fragments.html::footer"></footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
