--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -25,7 +25,7 @@
                 <div class="recipe-data p-2 flex-fill justify-content-center align-center border-top">
                     <li class="recipe-category-name fw-normal">
                         <h1 class="recipe-name fs-1 text-fuente text-uppercase" th:text="${recipe.name}"></h1>
-                        <a class="text-fuente text-uppercase" th:href="@{${'/recipes/categories/' + recipe.category.id}}">
+                        <a class="text-fuente text-uppercase" th:href="@{${'/categories/' + recipe.category.id + '/recipes'}}">
                             <h2 th:text="${recipe.category.name_es}">Nombre de Categoria</h2>
                         </a>
                         <ul class="recipe-all-data text-info">
@@ -48,6 +48,7 @@
 </main>
 <footer th:insert="fragments.html::footer"></footer>
 </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
