--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -182,6 +182,13 @@ ul {
   width: 100%;
 }
 
+
+//PROFILE
+
+.profile-picture{
+  max-height: 20vh;
+  width: 100%;
+}
 /*.welcome-text, .title-categories{
   font-size: $title_size;
 }
