--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -55,13 +55,32 @@
 </section>
 <section class="container-lg text-center py-4">
     <h2 class="text-info">MIS RECETAS</h2>
-    <div class="d-inline-block px-4" th:each="recipe :${recipeList}">
-        <img class="d-block pb-3 img-recipes rounded" th:src="@{/images/} + recipe_ + ${recipe.id} + .png">
-        <div class=" bg-resalte recipe-tags text-left">
-            <a th:href="@{${'/recipes/' + recipe.id}}">
-                <h3 class="d-inline-block ml-2" th:text="${recipe.name_es}">
-                </h3>
-            </a>
+    <div class="row px-4 d-inline-block my-3" th:each="recipe :${recipeList}">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-12">
+                    <img class="d-block pb-3 rounded" th:src="@{/images/} + recipe_ + ${recipe.id} + .png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <a th:href="@{${'/recipes/' + recipe.id}}">
+                        <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
+                    </a>
+                    <div class="bg-resalte p-1">
+                    <div class="col-12 pt-2 border border-fondo bw-5 bg-resalte ">
+                        <h5 class="text-fondo">EDITAR</h5>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center my-3">
+        <div class="col-8 bg-info p-1">
+        <div class="col-12 bg-info pt-2 border border-fondo bw-5">
+            <a href="/recipes/add"><h2 class="text-fondo">CREAR UNA NUEVA RECETA</h2></a>
+        </div>
         </div>
     </div>
 </section>
