--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -13,7 +13,7 @@
 <header th:insert="fragments.html :: header">Header</header>
 <main class="content">
     <h1 th:text="${recipe.name}"></h1>
-<h3 th:text="${recipe.category.name_es}"></h3>
+<h3 th:text="${recipe.category.name}"></h3>
 
 <h4>Tiempo</h4>
 <p th:text="${recipe.time}"></p>
