--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -26,7 +26,7 @@
                     <li class="recipe-category-name fw-normal">
                         <h1 class="recipe-name fs-1 text-fuente text-uppercase" th:text="${recipe.name}"></h1>
                         <a class="text-fuente text-uppercase" th:href="@{${'/categories/' + recipe.category.id + '/recipes'}}">
-                            <h2 th:text="${recipe.category.name_es}">Nombre de Categoria</h2>
+                            <h2 th:text="${recipe.category.name}">Nombre de Categoria</h2>
                         </a>
                         <ul class="recipe-all-data text-info">
                             <a class="text-info" th:href="@{${'/nutritionists/' + recipe.user.id}}">
