--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -31,11 +31,11 @@
 <h4>Añadir a favoritos</h4>
 <h2>Ingredientes</h2>
 <ul>
-    <li th:each="ingredient : ${recipe.ingredientList}" th:text="${ingredient.name_es}"></li>
+    <li th:each="ingredient : ${recipe.ingredientList}" th:text="${ingredient.name}"></li>
 </ul>
 <h2>Utensilios</h2>
 <ul>
-    <li th:each="tool : ${recipe.toolList}" th:text="${tool.name_es}"></li>
+    <li th:each="tool : ${recipe.toolList}" th:text="${tool.name}"></li>
 </ul>
 <h2>Preparacion</h2>
 <p th:text="${recipe.steps}"></p>
