Added RecipeDetail Page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
                             class="nutrifusion-food-welcome">
                         <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food-welcome">-->
                     </h1>
-                    <i class="fa-solid fa-heart heart-icon pb-3"></i>
+                    <i class="fa-solid fa-heart heart-icon pb-3 text-resalte"></i>
                     <h3 class="pt-2">
                         "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
                     </h3>
@@ -54,7 +54,7 @@
                 </section>
 
                 <section class="text-center px-2 py-4">
-                    <i class="globe-icon fa-solid fa-mitten py-3"></i>
+                    <i class="globe-icon fa-solid fa-mitten py-3 text-resalte"></i>
                     <h2 class="text-info pb-2">ACERCA DE NOSOTROS</h2>
                     <div>
                         <div class="d-inline-block">
