--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -74,10 +74,6 @@ html {
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
-@-ms-viewport {
-  width: device-width;
-}
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
@@ -116,7 +112,8 @@ p {
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
 }
@@ -189,13 +186,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
-
-li h2:hover {
-  color: #000;
-  text-decoration: underline;
-}
-
-ul a:hover {
+a:hover {
   color: #0056b3;
   text-decoration: underline;
 }
@@ -1709,6 +1700,10 @@ pre code {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+.form-control::-moz-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
 .form-control::placeholder {
   color: #6c757d;
   opacity: 1;
@@ -2102,7 +2097,9 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -3248,7 +3245,9 @@ tbody.collapse.show {
   height: 1rem;
   pointer-events: none;
   content: "";
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   background-color: #dee2e6;
 }
 .custom-control-label::after {
@@ -3311,7 +3310,9 @@ tbody.collapse.show {
   background-size: 8px 10px;
   border: 1px solid #ced4da;
   border-radius: 1.5rem;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .custom-select:focus {
   border-color: #80bdff;
@@ -4053,8 +4054,10 @@ tbody.collapse.show {
 }
 @media (min-width: 576px) {
   .card-columns {
-    column-count: 3;
-    column-gap: 1.25rem;
+    -moz-column-count: 3;
+         column-count: 3;
+    -moz-column-gap: 1.25rem;
+         column-gap: 1.25rem;
   }
   .card-columns .card {
     display: inline-block;
@@ -6405,7 +6408,8 @@ button.bg-resalte:focus {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   border: 0;
 }
 
@@ -6416,7 +6420,8 @@ button.bg-resalte:focus {
   overflow: visible;
   clip: auto;
   white-space: normal;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
 }
 
 .w-25 {
@@ -8119,6 +8124,56 @@ ul {
   width: 100%;
 }
 
+.recipe-container {
+  background: linear-gradient(#F1856A 50%, #D0EEF4 50%);
+  height: 75vh;
+}
+
+.recipe-info {
+  height: 50vh;
+}
+
+.recipe-image {
+  width: 65vh;
+}
+
+.recipe-full-info {
+  width: 65vh;
+}
+
+.recipe-image img {
+  height: 100%;
+  width: 100%;
+}
+
+.recipe-preparation {
+  margin-left: 0;
+}
+
+.recipe-section {
+  padding-left: 35vh;
+  position: relative;
+}
+
+.recipe-steps {
+  padding-left: 35vh;
+}
+
+.recipe-section ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+.recipe-section h2::after, .recipe-section ul::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: #000000;
+}
+
 .profile-picture {
   max-height: 55vh;
   width: 90%;
@@ -8219,4 +8274,4 @@ p {
   font-family: Playfair Display;
   font-style: normal;
   color: #000000;
-}
+}/*# sourceMappingURL=custom.css.map */
