--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -201,19 +201,20 @@ ul {
 
 .recipe-container{
   background: linear-gradient(#F1856A 50%, #D0EEF4 50%);
-  height: 75vh;
+  height: auto;
 }
 
 .recipe-info{
-  height: 50vh;
+  margin: 25px;
+  height: auto;
 }
 
 .recipe-image {
-  width: 65vh;
+  width: 30vw;
 }
 
 .recipe-full-info {
-  width: 65vh;
+  width: 30vw;
 }
 
 .recipe-image img {
@@ -247,6 +248,10 @@ ul {
   right: 0;
   height: 1px;
   background-color: #000000;
+}
+
+.fav-icon{
+  font-size: 20px;
 }
 
 //PROFILE
