Add service and repository ingredient

--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -58,7 +58,7 @@ $border-widths: (
   4: 8rem
 );
 $border-radius: 1.5rem;
-
+/*
 $grid-breakpoints: (
   //tablets y moviles, logo pequeño desplegable y boton
   xs: 315px,
@@ -69,7 +69,7 @@ $grid-breakpoints: (
   // tamaño pantallas grandes, logo,nombre,slogan navbar y boton
   xl: 1200px,
   xxl: 1440px
-); 
+); */
 
   //variables compuestas
   //cualquier texto general
